--- a/i18n/en.json
+++ b/i18n/en.json
@@ -1,6 +1,4 @@
 {
     "Params": "modal, help",
-    "Description": "Does something with OffMessage App. Type `/offMessage help` for more info.",
-    "Setting_Name": "Setting Name",
-    "Setting_Description": "Setting description"
+    "Description": "Does something with OffMessage App. Type `/offMessage help` for more info."
 }
